# BJTU-Dining-Simulation-System

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  simulation_log.csv
.github/workflows/: ci.yml
docs/: AI_DECISION_REPORT.md  CHANGELOG_AI_REPORT.md  DEVELOPMENT_LOG.md  MODEL_ASSUMPTIONS.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  RUN_GUIDE.md  UI_FIX_NOTES.md  寮€鍙戞棩蹇梍鎴愬憳B_GUI楠ㄦ灦_20260504.md
evidence/: make_evidence_images.py
include/core/: Canteen.h  Config.h  SimulationEngine.h  Student.h  Window.h
include/gui/: ChartWidget.h  MainWindow.h  RenderWidget.h
include/utils/: DecisionReportGenerator.h  RandomGenerator.h  SimpleJson.h  StatisticsLogger.h
resources/: default_config.json
resources/scenarios/: high_capacity_10_windows.json  low_seat_pressure.json
src/core/: Canteen.cpp  Config.cpp  SimulationEngine.cpp  Student.cpp  Window.cpp
src/gui/: ChartWidget.cpp  MainWindow.cpp  RenderWidget.cpp
src/utils/: DecisionReportGenerator.cpp  RandomGenerator.cpp  SimpleJson.cpp  StatisticsLogger.cpp
tests/: test_core.cpp
tools/: plot_metrics.py
